2016-11-25  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (keyPressed): handle Alt++/Alt+- to change
	resolution.
	* src/client/GameEngine.cpp (getPreviousResolution): get the previous
	available resolution from Ogre.
	* src/client/GameEngine.cpp (getNextResolution): get the next available
	resolution from Ogre.

	* src/client/GameEngine.cpp (reconfigure): mCfgOverride cleaned after
	override.
	* src/client/GameEngine.hpp (toFullscreen): removed.

	* src/client/GameEngine.hpp (mRestartMessage): to-be-printed message
	after reconfigure is now a member.
	* src/client/GameEngine.hpp (mCfgOverride): new ogre configuration
	overriding map.

	* src/client/OgreCfgSaver.cpp: new class used to serialize new
	Ogre configuration after fullscreen switch.
	* src/client/GameEngine.cpp (keyPressed): taking a screenshot now
	print a TempMessage including name of PNG file.

2016-11-24  Jérôme Pasquier  <rainbru@free.fr>

	* src/client/GameEngine.cpp (reconfigure): use TempMessage to
	print new Fullscreen option value.
	* src/client/TempMessage.cpp: created to print a temporary message
	after fullscreen switch.

	* src/client/MainMenu.cpp (save/restore): All ByiDialogs should be
	saved/restored.
	* src/client/CeguiDialog.cpp (save/restore): implemented for
	CeguiMember pointer.
	* src/client/CeguiDialog.hpp (mDialog): new member.

	* src/client/MainMenu.cpp (enter): setting the correct windowName
	when calling loadLayout makes the MainMenu window getting saved.
	* src/client/GameState.cpp (loadLayout): add a second string argument
	for CEGUI window name to be returned.

	* src/client/Mainpage.hpp: create the client page.
	* src/Mainpage.hpp: mainpage created.
	* src/logger/Mainpage.hpp: becomes a subpage instead of the mainpage.

2016-11-23  Jérôme Pasquier  <rainbru@free.fr>

	* OLD/: recursively remove directory.

	* src/client/GameEngine.cpp (keyPressed): add F11/screenshot
	keybinding.
	* README.md: add F11 key binding for screenshot.
