@@ -1,3 +1,8 @@
+2016-12-07  Jérôme Pasquier  <rainbru@free.fr>
+
+	* src/logger/ObjectAttribute.hpp: update doxygen documentation.
+	* src/logger/ObjectAttribute.hpp: add const qualifier to getters.
+
 2016-11-25  Jérôme Pasquier  <rainbru@free.fr>
 
 	* src/client/GameEngine.cpp (keyPressed): handle Alt++/Alt+- to change
